          handle it. Now it only allocates a table for the visible
          region which will always be sane, and even has insanity
          checks now. At worst you'll get an unrendered image if the
          values are silly and some slowness. No crashes.

2011-02-13  Brett Nash (nash@nash.id.au)
	
	* Fix crash when deleting proxies.  This _technically_ breaks
	  evas engines which realloc engine data when a border is set.
	  Practically no engines do this.  There is a comment there (and
	  if the engine does that border set won't work), in which case
	  a more complex work-around is possible.

2011-02-14  Tom Hacohen (TAsn)

	* Added a newline character mode API to textblock. This lets us set
	  the newline behavior to either normal (i.e only break a line, not
	  a paragraph) to "behave as a PS" mode. Default is the latter.
	  The former is the more correct approach but I guess everything else
	  is in e is not yet ready to use it. These API should help with the
	  transition.
	* A lot of textblock speed improvements and reduced memory footprint.

2011-02-16  Jeonghyun Yun

        * Patch from Jeonghyun Yun <jh0506.yun@samsung.com> that
          improves BMP loader support to handle malformed RLE BMP's that
          encode more pixels per line than the image actuall has.

2011-02-16  Tom Hacohen (TAsn)

	* Dropped Evas_Encoding and moved to use Eina_unicode_utf8 instead.
	* Started showing the unicode replacement character instead of missing
	glyphs.

2011-02-20  Carsten Haitzler (The Rasterman)

        * Fix bug in font string parsing that can result in a crash if a
          font element is long enough.
        * Fiix convert rgba8888 -> a8 bug so it wont crash.

2011-02-21  Carsten Haitzler (The Rasterman)

	* Fixed bug with memory access of old utf8 string when
          comparing prev and cur state with text obj.

2011-02-22  Tom Hacohen (TAsn)

	* Fixed a bug in textblock cursor position with empty textblocks.

